# bbang-be

./: .gitignore  .python-version  Dockerfile  README.md  manage.py  pyproject.toml  test.sh
.github/ISSUE_TEMPLATE/: custom.md  이슈-생성-템플릿.md
.github/workflows/: checks.yml
app/: admin.py  manage.py
app/accounts/: admin.py  email.py  models.py  oauthviews.py  serializers.py  test_views.py  tests.py  urls.py  views.py
app/accounts/migrations/: 0001_initial.py  0002_alter_user_id_alter_userimage_id.py
app/accounts/tests/: test_views.py  tests.py
app/accounts/views/: oauthviews.py  views.py
app/artists/: admin.py  apps.py  models.py  serializers.py  test_model.py  urls.py  views.py
app/artists/migrations/: 0001_initial.py
app/artists/test/: test_model.py  test_views.py
app/common/: models.py
app/config/: asgi.py
app/config/settings/: base.py
app/config/urls/: base.py  dev.py
app/content/: admin.py  apps.py  email.py  models.py  push.py  test_view.py  tests.py  urls.py  views.py
app/content/migrations/: 0001_initial.py
app/schedule/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  utiles.py  views.py
app/schedule/migrations/: 0001_initial.py
config/: asgi.py
config/settings/: base.py
config/urls/: base.py  dev.py
scripts/: run.sh
